--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Have a taste ng2</title>
 
     <!-- 1. Load libraries -->
     <script src="lib/angular2-polyfills.js"></script>
