--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Have a taste ng2</title>
-    <link rel="stylesheet" href="app/content/global.css"/>
-    <link rel="stylesheet" href="app/content/header.css"/>
+    <link rel="stylesheet" href="app/common/content/global.css"/>
+    <link rel="stylesheet" href="app/common/content/header.css"/>
     <!-- 1. Load libraries -->
     <script src="lib/angular2-polyfills.js"></script>
     <script src="lib/system.js"></script>
